--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bezpieczny Komunikator</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       padding: 0;
@@ -20,7 +17,6 @@
       align-items: center;
       justify-content: center;
     }
-
     .container {
       width: 100%;
       max-width: 420px;
@@ -30,14 +26,8 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.3);
       animation: fadeIn 0.5s ease;
     }
-
-    h2 {
-      text-align: center;
-      color: #ffffff;
-      margin-bottom: 20px;
-    }
-
-    input {
+    h2 { text-align: center; color: #ffffff; margin-bottom: 20px; }
+    input[type="text"], input[type="password"] {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
@@ -47,12 +37,7 @@
       color: #ffffff;
       transition: background-color 0.3s ease;
     }
-
-    input:focus {
-      outline: none;
-      background-color: #3a3d41;
-    }
-
+    input:focus { outline: none; background-color: #3a3d41; }
     button {
       padding: 12px;
       border: none;
@@ -63,63 +48,21 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-
-    button:hover {
-      background-color: #4752c4;
-    }
-
+    button:hover { background-color: #4752c4; }
     .error {
       color: #f04747;
       font-size: 0.9rem;
       text-align: center;
       min-height: 1.2em;
     }
-
     #chat {
       display: none;
+      flex-direction: column;
       height: 100vh;
       width: 100vw;
       background-color: #2f3136;
-      display: flex;
-      flex-direction: row;
-    }
-
-    #usersOnline {
-      width: 120px;
-      background: #202225;
-      padding: 10px;
-      overflow-y: auto;
-      border-right: 1px solid #111;
-    }
-
-    #usersOnline h4 {
-      color: #ffffff;
-      font-size: 0.9rem;
-      margin-top: 0;
-      margin-bottom: 10px;
-    }
-
-    #usersOnline ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    #usersOnline li {
-      padding: 6px 8px;
-      border-radius: 4px;
-      background-color: #2c2f33;
-      margin-bottom: 5px;
-      font-size: 0.85rem;
-    }
-
-    #mainChat {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
       padding: 10px;
     }
-
     #messages {
       flex-grow: 1;
       padding: 20px;
@@ -128,25 +71,22 @@
       border-radius: 8px;
       background: #23272a;
     }
-
     .message {
       margin-bottom: 15px;
       animation: slideUp 0.2s ease;
     }
-
     .message .user {
       color: #4f90e2;
       font-weight: bold;
     }
-
     .message .text {
       background: #40444b;
       padding: 10px;
       border-radius: 6px;
       margin-top: 4px;
       color: white;
+      word-break: break-word;
     }
-
     #inputContainer {
       display: flex;
       align-items: center;
@@ -154,7 +94,6 @@
       padding: 5px 10px;
       gap: 10px;
     }
-
     #messageInput {
       flex-grow: 1;
       border: none;
@@ -164,7 +103,6 @@
       border-radius: 8px;
       font-size: 1rem;
     }
-
     #sendBtn {
       background-color: #5865f2;
       width: 46px;
@@ -177,12 +115,30 @@
       align-items: center;
       justify-content: center;
     }
-
+    #imageBtn {
+      background-color: #4f545c;
+      width: 46px;
+      height: 46px;
+      min-width: 46px;
+      border-radius: 50%;
+      font-size: 1.2rem;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #imageInput {
+      display: none;
+    }
+    img.chat-image {
+      max-width: 100%;
+      border-radius: 6px;
+      margin-top: 5px;
+    }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes slideUp {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -207,16 +163,12 @@
 </div>
 
 <div id="chat">
-  <div id="usersOnline">
-    <h4>Online</h4>
-    <ul id="userList"></ul>
-  </div>
-  <div id="mainChat">
-    <div id="messages"></div>
-    <div id="inputContainer">
-      <input type="text" id="messageInput" placeholder="Napisz wiadomość...">
-      <button id="sendBtn">➤</button>
-    </div>
+  <div id="messages"></div>
+  <div id="inputContainer">
+    <input type="text" id="messageInput" placeholder="Napisz wiadomość...">
+    <button id="sendBtn">➤</button>
+    <input type="file" id="imageInput" accept="image/*">
+    <button id="imageBtn">📷</button>
   </div>
 </div>
 
@@ -239,13 +191,13 @@
   const messageInput = document.getElementById("messageInput");
   const sendBtn = document.getElementById("sendBtn");
 
-  const userList = document.getElementById("userList");
+  const imageInput = document.getElementById("imageInput");
+  const imageBtn = document.getElementById("imageBtn");
 
   let username = "";
 
   ws.onmessage = (event) => {
     const data = JSON.parse(event.data);
-
     if (data.type === "access_code") {
       if (data.status === "ok") {
         accessScreen.style.display = "none";
@@ -268,44 +220,31 @@
     }
 
     if (data.type === "message") {
-      addMessage(data.username, data.text);
-    }
+      const div = document.createElement("div");
+      div.classList.add("message");
 
-    if (data.type === "history") {
-      data.messages.forEach(msg => addMessage(msg.username, msg.text));
-    }
+      const user = document.createElement("div");
+      user.classList.add("user");
+      user.textContent = data.username;
 
-    if (data.type === "user_list") {
-      updateUserList(data.users);
+      const text = document.createElement("div");
+      text.classList.add("text");
+
+      if (data.image) {
+        const img = document.createElement("img");
+        img.src = data.image;
+        img.className = "chat-image";
+        text.appendChild(img);
+      } else {
+        text.textContent = data.text;
+      }
+
+      div.appendChild(user);
+      div.appendChild(text);
+      messages.appendChild(div);
+      messages.scrollTop = messages.scrollHeight;
     }
   };
-
-  function addMessage(user, text) {
-    const div = document.createElement("div");
-    div.classList.add("message");
-
-    const userDiv = document.createElement("div");
-    userDiv.classList.add("user");
-    userDiv.textContent = user;
-
-    const textDiv = document.createElement("div");
-    textDiv.classList.add("text");
-    textDiv.textContent = text;
-
-    div.appendChild(userDiv);
-    div.appendChild(textDiv);
-    messages.appendChild(div);
-    messages.scrollTop = messages.scrollHeight;
-  }
-
-  function updateUserList(users) {
-    userList.innerHTML = "";
-    users.forEach(u => {
-      const li = document.createElement("li");
-      li.textContent = u;
-      userList.appendChild(li);
-    });
-  }
 
   accessBtn.onclick = () => {
     const code = accessCodeInput.value.trim();
@@ -336,6 +275,22 @@
   messageInput.addEventListener("keypress", (e) => {
     if (e.key === "Enter") sendBtn.click();
   });
+
+  imageBtn.onclick = () => {
+    imageInput.click();
+  };
+
+  imageInput.onchange = () => {
+    const file = imageInput.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.onload = () => {
+      const base64 = reader.result;
+      ws.send(JSON.stringify({ type: "message", image: base64 }));
+    };
+    reader.readAsDataURL(file);
+  };
 </script>
 </body>
 </html>
